# Air-Gapped-Forensic-Analyst

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  QA_REPORT.md  README.md  pyproject.toml  requirements.txt
afa/: __init__.py  brief.py  cli.py  correlate.py  egress.py  gui.py  loader.py  models.py  normalize.py  package.py  providers.py  report.py  rootcause.py  tools.py
afa/static/: index.html
artifacts/: events.jsonl  generate.py  registry.json
collector/: Invoke-AfaCollect.ps1
examples/: collection-report.html  make_sample_case.py  make_sample_collection.py
examples/sample-case/db-02/: events.json  manifest.json  network.json  prefetch.json  processes.json  programs.json  registry.json  shimcache.json  users.json
examples/sample-case/dc-01/: events.json  manifest.json  network.json  prefetch.json  processes.json  programs.json  registry.json  services.json  shimcache.json  users.json  wmi.json
examples/sample-case/web-01/: browser.json  events.json  filesystem.json  manifest.json  network.json  prefetch.json  processes.json  programs.json  services.json  shimcache.json  users.json
examples/sample-collection/: browser.json  events.json  filesystem.json  manifest.json  network.json  prefetch.json  processes.json  programs.json  registry.json  services.json  shimcache.json  users.json  wmi.json
examples/sample-exports/: events.json  registry.reg
tests/: test_afa.py
